Improve portrait quality, fix safari layout bug

--- a/public/selected-work/src/theme/kg.css
+++ b/public/selected-work/src/theme/kg.css
@@ -75,6 +75,11 @@
 }
 
 .reveal-viewport {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
     background-color: var(--r-background-color);
 }
 
@@ -150,7 +155,7 @@
  * PROGRESS BAR
  *********************************************/
 
- .reveal .progress {
+.reveal .progress {
     background: rgba(0, 0, 0, 0.2);
     color: var(--r-link-color);
 }
@@ -160,21 +165,22 @@
  *********************************************/
 
 .reveal section {
-    height: 100% !important;
+    height: 100%;
 }
 
- .reveal .grid {
+.reveal .grid {
     display: grid !important;
     gap: calc(var(--slide-gutter) / 1.5);
     align-items: center;
     grid-template-rows: 1fr max-content;
-    margin: var(--slide-gutter);
+    padding: var(--slide-gutter);
     max-width: calc(100vw - calc( var(--slide-gutter) * 2)) !important;
     height: 100%;
+    height: -webkit-fill-available !important;
     max-height: calc(100vh - calc( var(--slide-gutter) * 2)) !important;
 }
 
- .reveal .primary-section {
+.reveal .primary-section {
     position: relative;
     display: flex;
     justify-content: center;
@@ -182,9 +188,10 @@
     height: 100%;
     font-size: clamp(1.375rem, calc(0.95rem + 1.8vw), 2.75rem); /* 22 - 44 */
     font-weight: bold;
+    overflow: auto;
 }
 
- .reveal .primary-section img {
+.reveal .primary-section img {
     position: absolute;
     top: 0;
     right: 0;
@@ -201,7 +208,7 @@
  * Custom Footer
  *********************************************/
 
- .reveal footer {
+.reveal footer {
     position: relative;
     text-align: left;
     line-height: 0;
@@ -210,7 +217,7 @@
     gap: 5px;
 }
 
- .reveal footer::after {
+.reveal footer::after {
     content: '';
     position: absolute;
     left: 0;
@@ -221,8 +228,8 @@
     z-index: -1;
 }
 
- .reveal footer h1,
- .reveal footer p {
+.reveal footer h1,
+.reveal footer p {
     display: inline-block;
     margin: 0;
     padding-right: .75em;
@@ -232,13 +239,13 @@
     background-color: var(--white);
 }
 
- .reveal footer h1 {
+.reveal footer h1 {
     font-weight: bold;
     font-size: 1.5rem;
     font-size: clamp(1.0625rem, calc(0.97rem + 0.41vw), 1.5rem); /* 17 - 24 */
 }
 
- .reveal footer p {
+.reveal footer p {
     color: var(--ash-500);
     font-size: 1.25rem;
     font-size: clamp(0.9375rem, calc(0.88rem + 0.24vw), 1.25rem); /* 15 - 18 */
